# gutter

./: CHANGELOG.md  CLAUDE.md
_security_reviews/: docodex-review-2026-04-11.md  security-review-2026-04-11.md
docs/: backlog.md  known_issues.md
docs/completed-plans/: POLISH_PLAN.md  QUICK_WINS.md  multi-root-design.md  multi-root-impl-plan.md  phase-12-templates.md  phase-13-tags.md  phase-14-impl.md  phase-14-version-history.md  phase-15-reading-mode.md  snippets-design.md  snippets-impl-plan.md
docs/ideas/: encryption-settings-option-b.html  encryption-settings-ui.html  encryption-tier3-4-cartoon.html  encryption-tier3-4-visual.html  encryption-tier3-4.html  encryption.md  settings-refactor.html
docs/plans/: 2026-02-23-file-safety-design.md  2026-02-23-file-safety-impl.md  2026-05-01-open-file-from-os-design.md  active_line_editing.md  heading_fold_v2.md  master_plan.md
gutter/: package-lock.json  package.json
gutter/src/: App.tsx
gutter/src-tauri/: Cargo.toml  tauri.conf.json
gutter/src-tauri/src/: lib.rs  menu.rs
gutter/src-tauri/src/commands/: export.rs  file_io.rs  mod.rs  snippets.rs  templates.rs  watcher.rs
gutter/src/components/: PreferencesDialog.tsx  ReadingMode.tsx  SnippetNamePrompt.tsx  SnippetPicker.tsx  SnippetsPanel.tsx  StatusBar.tsx  TabBar.tsx  TemplatePicker.tsx  UnsavedChangesDialog.tsx  WelcomeScreen.tsx
gutter/src/hooks/: useCommands.ts  useFileOps.ts  useFoldStatePersistence.ts  useKeyboardShortcuts.ts  useSaveHandler.ts  (+5 more)
gutter/tests/: hash.test.ts  multiRoot.test.ts  parser.test.ts  roundtrip.test.ts  snippetStore.test.ts
(+17 files in other folders)
