[package]
name = "gutter"
version = "0.9.0"
description = "A local-first WYSIWYG markdown editor with first-class commenting"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
notify = "7"
dirs = "5"
url = "2"
tauri-plugin-single-instance = "2"
sha2 = "0.10"
base64 = "0.22"

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 16
opt-level = "s"
panic = "abort"
